// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sets up the right view hierarchy 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "black",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "black",
          "height": "100%",
          "maxWidth": 540,
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "paddingTop": 40,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "white",
                  "fontSize": 30,
                  "marginBottom": 20,
                  "paddingLeft": 20,
                  "paddingRight": 20,
                  "textAlign": "center",
                },
                Object {},
                Object {
                  "fontFamily": "AGaramondPro-Regular",
                },
              ]
            }
          >
            Answer a few questions about the work
          </Text>
          <View
            style={
              Object {
                "padding": 10,
              }
            }
          >
            <View
              style={
                Array [
                  undefined,
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "paddingVertical": 6,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#cccccc",
                      "fontSize": 20,
                      "marginBottom": 18,
                      "marginTop": 18,
                      "paddingLeft": 25,
                      "paddingRight": 25,
                      "textAlign": "center",
                    },
                    Object {
                      "flex": 1,
                      "paddingLeft": 10,
                      "textAlign": "left",
                    },
                    Object {
                      "fontFamily": "AGaramondPro-Regular",
                    },
                  ]
                }
              >
                Is this an edition?
              </Text>
              <View
                accessibilityComponentType={undefined}
                accessibilityLabel={undefined}
                accessibilityTraits={undefined}
                accessible={true}
                hasTVPreferredFocus={undefined}
                hitSlop={undefined}
                isTVSelectable={true}
                nativeID={undefined}
                onLayout={undefined}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "green",
                        "borderColor": "white",
                        "borderRadius": 16,
                        "borderWidth": 1,
                        "height": 34,
                        "width": 64,
                      },
                      Object {
                        "backgroundColor": "black",
                      },
                    ],
                  ]
                }
                testID={undefined}
                tvParallaxProperties={undefined}
              >
                <View>
                  <View
                    style={
                      Array [
                        Object {
                          "flexDirection": "row",
                          "justifyContent": "space-between",
                          "marginLeft": 8,
                          "marginRight": 8,
                          "marginTop": 9,
                        },
                        undefined,
                      ]
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      disabled={false}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "white",
                            "fontFamily": "AvantGardeGothicITC",
                            "fontSize": 11,
                            "letterSpacing": 0.75,
                            "textAlign": "center",
                            "width": 24,
                          },
                          Object {
                            "color": "white",
                          },
                        ]
                      }
                    >
                      
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      disabled={false}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "white",
                            "fontFamily": "AvantGardeGothicITC",
                            "fontSize": 11,
                            "letterSpacing": 0.75,
                            "textAlign": "center",
                            "width": 24,
                          },
                          Object {
                            "color": "white",
                          },
                        ]
                      }
                    >
                      NO
                    </Text>
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "left": 6,
                          "position": "absolute",
                          "right": 6,
                          "top": 4,
                        },
                        Object {
                          "flexDirection": "row",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "backgroundColor": "black",
                            "borderColor": "white",
                            "borderRadius": 12,
                            "borderWidth": 1,
                            "height": 24,
                            "width": 24,
                          },
                          Object {
                            "borderColor": "white",
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  undefined,
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "paddingVertical": 6,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#cccccc",
                      "fontSize": 20,
                      "marginBottom": 18,
                      "marginTop": 18,
                      "paddingLeft": 25,
                      "paddingRight": 25,
                      "textAlign": "center",
                    },
                    Object {
                      "flex": 1,
                      "paddingLeft": 10,
                      "textAlign": "left",
                    },
                    Object {
                      "fontFamily": "AGaramondPro-Regular",
                    },
                  ]
                }
              >
                Is this work signed?
              </Text>
              <View
                accessibilityComponentType={undefined}
                accessibilityLabel={undefined}
                accessibilityTraits={undefined}
                accessible={true}
                hasTVPreferredFocus={undefined}
                hitSlop={undefined}
                isTVSelectable={true}
                nativeID={undefined}
                onLayout={undefined}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "green",
                        "borderColor": "white",
                        "borderRadius": 16,
                        "borderWidth": 1,
                        "height": 34,
                        "width": 64,
                      },
                      Object {
                        "backgroundColor": "black",
                      },
                    ],
                  ]
                }
                testID={undefined}
                tvParallaxProperties={undefined}
              >
                <View>
                  <View
                    style={
                      Array [
                        Object {
                          "flexDirection": "row",
                          "justifyContent": "space-between",
                          "marginLeft": 8,
                          "marginRight": 8,
                          "marginTop": 9,
                        },
                        undefined,
                      ]
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      disabled={false}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "white",
                            "fontFamily": "AvantGardeGothicITC",
                            "fontSize": 11,
                            "letterSpacing": 0.75,
                            "textAlign": "center",
                            "width": 24,
                          },
                          Object {
                            "color": "white",
                          },
                        ]
                      }
                    >
                      
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      disabled={false}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "white",
                            "fontFamily": "AvantGardeGothicITC",
                            "fontSize": 11,
                            "letterSpacing": 0.75,
                            "textAlign": "center",
                            "width": 24,
                          },
                          Object {
                            "color": "white",
                          },
                        ]
                      }
                    >
                      NO
                    </Text>
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "left": 6,
                          "position": "absolute",
                          "right": 6,
                          "top": 4,
                        },
                        Object {
                          "flexDirection": "row",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "backgroundColor": "black",
                            "borderColor": "white",
                            "borderRadius": 12,
                            "borderWidth": 1,
                            "height": 24,
                            "width": 24,
                          },
                          Object {
                            "borderColor": "white",
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  undefined,
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "paddingVertical": 6,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#cccccc",
                      "fontSize": 20,
                      "marginBottom": 18,
                      "marginTop": 18,
                      "paddingLeft": 25,
                      "paddingRight": 25,
                      "textAlign": "center",
                    },
                    Object {
                      "flex": 1,
                      "paddingLeft": 10,
                      "textAlign": "left",
                    },
                    Object {
                      "fontFamily": "AGaramondPro-Regular",
                    },
                  ]
                }
              >
                Do you have a certificate of authenticity?
              </Text>
              <View
                accessibilityComponentType={undefined}
                accessibilityLabel={undefined}
                accessibilityTraits={undefined}
                accessible={true}
                hasTVPreferredFocus={undefined}
                hitSlop={undefined}
                isTVSelectable={true}
                nativeID={undefined}
                onLayout={undefined}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "green",
                        "borderColor": "white",
                        "borderRadius": 16,
                        "borderWidth": 1,
                        "height": 34,
                        "width": 64,
                      },
                      Object {
                        "backgroundColor": "black",
                      },
                    ],
                  ]
                }
                testID={undefined}
                tvParallaxProperties={undefined}
              >
                <View>
                  <View
                    style={
                      Array [
                        Object {
                          "flexDirection": "row",
                          "justifyContent": "space-between",
                          "marginLeft": 8,
                          "marginRight": 8,
                          "marginTop": 9,
                        },
                        undefined,
                      ]
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      disabled={false}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "white",
                            "fontFamily": "AvantGardeGothicITC",
                            "fontSize": 11,
                            "letterSpacing": 0.75,
                            "textAlign": "center",
                            "width": 24,
                          },
                          Object {
                            "color": "white",
                          },
                        ]
                      }
                    >
                      
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      disabled={false}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "white",
                            "fontFamily": "AvantGardeGothicITC",
                            "fontSize": 11,
                            "letterSpacing": 0.75,
                            "textAlign": "center",
                            "width": 24,
                          },
                          Object {
                            "color": "white",
                          },
                        ]
                      }
                    >
                      NO
                    </Text>
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "left": 6,
                          "position": "absolute",
                          "right": 6,
                          "top": 4,
                        },
                        Object {
                          "flexDirection": "row",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "backgroundColor": "black",
                            "borderColor": "white",
                            "borderRadius": 12,
                            "borderWidth": 1,
                            "height": 24,
                            "width": 24,
                          },
                          Object {
                            "borderColor": "white",
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "paddingVertical": 6,
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "height": 43,
                    "marginTop": 20,
                    "width": 320,
                  }
                }
              >
                <View
                  accessibilityComponentType={undefined}
                  accessibilityLabel={undefined}
                  accessibilityTraits={undefined}
                  accessible={true}
                  collapsable={undefined}
                  hitSlop={undefined}
                  nativeID={undefined}
                  onLayout={undefined}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "rgba(255, 255, 255, 1)",
                      "borderColor": "rgba(255, 255, 255, 1)",
                      "borderWidth": 1,
                      "flex": 1,
                      "height": 36,
                      "justifyContent": "center",
                    }
                  }
                  testID={undefined}
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontSize": 12,
                        },
                        Object {
                          "color": "rgba(0, 0, 0, 1)",
                          "fontFamily": "AGaramondPro-Regular",
                          "opacity": 1,
                        },
                        Object {
                          "fontFamily": "AvantGardeGothicITC",
                        },
                      ]
                    }
                  >
                    SUBMIT TO ARTSY
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Shows and additional 2 inputs when there's edition info 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "black",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "black",
          "height": "100%",
          "maxWidth": 540,
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "paddingTop": 40,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "white",
                  "fontSize": 30,
                  "marginBottom": 20,
                  "paddingLeft": 20,
                  "paddingRight": 20,
                  "textAlign": "center",
                },
                Object {},
                Object {
                  "fontFamily": "AGaramondPro-Regular",
                },
              ]
            }
          >
            Answer a few questions about the work
          </Text>
          <View
            style={
              Object {
                "padding": 10,
              }
            }
          >
            <View
              style={
                Array [
                  undefined,
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "paddingVertical": 6,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#cccccc",
                      "fontSize": 20,
                      "marginBottom": 18,
                      "marginTop": 18,
                      "paddingLeft": 25,
                      "paddingRight": 25,
                      "textAlign": "center",
                    },
                    Object {
                      "flex": 1,
                      "paddingLeft": 10,
                      "textAlign": "left",
                    },
                    Object {
                      "fontFamily": "AGaramondPro-Regular",
                    },
                  ]
                }
              >
                Is this an edition?
              </Text>
              <View
                accessibilityComponentType={undefined}
                accessibilityLabel={undefined}
                accessibilityTraits={undefined}
                accessible={true}
                hasTVPreferredFocus={undefined}
                hitSlop={undefined}
                isTVSelectable={true}
                nativeID={undefined}
                onLayout={undefined}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "green",
                        "borderColor": "white",
                        "borderRadius": 16,
                        "borderWidth": 1,
                        "height": 34,
                        "width": 64,
                      },
                      Object {
                        "backgroundColor": "white",
                      },
                    ],
                  ]
                }
                testID={undefined}
                tvParallaxProperties={undefined}
              >
                <View>
                  <View
                    style={
                      Array [
                        Object {
                          "flexDirection": "row",
                          "justifyContent": "space-between",
                          "marginLeft": 8,
                          "marginRight": 8,
                          "marginTop": 9,
                        },
                        undefined,
                      ]
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      disabled={false}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "white",
                            "fontFamily": "AvantGardeGothicITC",
                            "fontSize": 11,
                            "letterSpacing": 0.75,
                            "textAlign": "center",
                            "width": 24,
                          },
                          Object {
                            "color": "black",
                          },
                        ]
                      }
                    >
                      YES
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      disabled={false}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "white",
                            "fontFamily": "AvantGardeGothicITC",
                            "fontSize": 11,
                            "letterSpacing": 0.75,
                            "textAlign": "center",
                            "width": 24,
                          },
                          Object {
                            "color": "black",
                          },
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "left": 6,
                          "position": "absolute",
                          "right": 6,
                          "top": 4,
                        },
                        Object {
                          "flexDirection": "row-reverse",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "backgroundColor": "black",
                            "borderColor": "black",
                            "borderRadius": 12,
                            "borderWidth": 1,
                            "height": 24,
                            "width": 24,
                          },
                          Object {
                            "borderColor": "white",
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  undefined,
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "paddingVertical": 6,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "margin": 10,
                    },
                    Object {
                      "flex": 1,
                      "maxHeight": 40,
                    },
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "height": 40,
                    }
                  }
                >
                  <TextInput
                    autoCorrect={false}
                    clearButtonMode="while-editing"
                    keyboardAppearance="dark"
                    keyboardType="phone-pad"
                    onChangeText={[Function]}
                    placeholder="Edition Size"
                    placeholderTextColor="#666666"
                    selectionColor="#cccccc"
                    style={
                      Array [
                        Object {
                          "backgroundColor": "black",
                          "color": "white",
                          "flexBasis": 0,
                          "flexGrow": 1,
                          "flexShrink": 1,
                          "fontFamily": "AGaramondPro-Regular",
                          "fontSize": 20,
                          "height": 40,
                        },
                        undefined,
                      ]
                    }
                    value={undefined}
                  />
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "white",
                        "height": 1,
                      },
                      undefined,
                    ]
                  }
                />
              </View>
              <View
                style={
                  Array [
                    Object {
                      "margin": 10,
                    },
                    Object {
                      "flex": 1,
                      "maxHeight": 40,
                    },
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "height": 40,
                    }
                  }
                >
                  <TextInput
                    autoCorrect={false}
                    clearButtonMode="while-editing"
                    keyboardAppearance="dark"
                    onChangeText={[Function]}
                    placeholder="Edition Number"
                    placeholderTextColor="#666666"
                    selectionColor="#cccccc"
                    style={
                      Array [
                        Object {
                          "backgroundColor": "black",
                          "color": "white",
                          "flexBasis": 0,
                          "flexGrow": 1,
                          "flexShrink": 1,
                          "fontFamily": "AGaramondPro-Regular",
                          "fontSize": 20,
                          "height": 40,
                        },
                        undefined,
                      ]
                    }
                    value={undefined}
                  />
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "white",
                        "height": 1,
                      },
                      undefined,
                    ]
                  }
                />
              </View>
            </View>
            <View
              style={
                Array [
                  undefined,
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "paddingVertical": 6,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#cccccc",
                      "fontSize": 20,
                      "marginBottom": 18,
                      "marginTop": 18,
                      "paddingLeft": 25,
                      "paddingRight": 25,
                      "textAlign": "center",
                    },
                    Object {
                      "flex": 1,
                      "paddingLeft": 10,
                      "textAlign": "left",
                    },
                    Object {
                      "fontFamily": "AGaramondPro-Regular",
                    },
                  ]
                }
              >
                Is this work signed?
              </Text>
              <View
                accessibilityComponentType={undefined}
                accessibilityLabel={undefined}
                accessibilityTraits={undefined}
                accessible={true}
                hasTVPreferredFocus={undefined}
                hitSlop={undefined}
                isTVSelectable={true}
                nativeID={undefined}
                onLayout={undefined}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "green",
                        "borderColor": "white",
                        "borderRadius": 16,
                        "borderWidth": 1,
                        "height": 34,
                        "width": 64,
                      },
                      Object {
                        "backgroundColor": "black",
                      },
                    ],
                  ]
                }
                testID={undefined}
                tvParallaxProperties={undefined}
              >
                <View>
                  <View
                    style={
                      Array [
                        Object {
                          "flexDirection": "row",
                          "justifyContent": "space-between",
                          "marginLeft": 8,
                          "marginRight": 8,
                          "marginTop": 9,
                        },
                        undefined,
                      ]
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      disabled={false}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "white",
                            "fontFamily": "AvantGardeGothicITC",
                            "fontSize": 11,
                            "letterSpacing": 0.75,
                            "textAlign": "center",
                            "width": 24,
                          },
                          Object {
                            "color": "white",
                          },
                        ]
                      }
                    >
                      
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      disabled={false}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "white",
                            "fontFamily": "AvantGardeGothicITC",
                            "fontSize": 11,
                            "letterSpacing": 0.75,
                            "textAlign": "center",
                            "width": 24,
                          },
                          Object {
                            "color": "white",
                          },
                        ]
                      }
                    >
                      NO
                    </Text>
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "left": 6,
                          "position": "absolute",
                          "right": 6,
                          "top": 4,
                        },
                        Object {
                          "flexDirection": "row",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "backgroundColor": "black",
                            "borderColor": "white",
                            "borderRadius": 12,
                            "borderWidth": 1,
                            "height": 24,
                            "width": 24,
                          },
                          Object {
                            "borderColor": "white",
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  undefined,
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "paddingVertical": 6,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#cccccc",
                      "fontSize": 20,
                      "marginBottom": 18,
                      "marginTop": 18,
                      "paddingLeft": 25,
                      "paddingRight": 25,
                      "textAlign": "center",
                    },
                    Object {
                      "flex": 1,
                      "paddingLeft": 10,
                      "textAlign": "left",
                    },
                    Object {
                      "fontFamily": "AGaramondPro-Regular",
                    },
                  ]
                }
              >
                Do you have a certificate of authenticity?
              </Text>
              <View
                accessibilityComponentType={undefined}
                accessibilityLabel={undefined}
                accessibilityTraits={undefined}
                accessible={true}
                hasTVPreferredFocus={undefined}
                hitSlop={undefined}
                isTVSelectable={true}
                nativeID={undefined}
                onLayout={undefined}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "green",
                        "borderColor": "white",
                        "borderRadius": 16,
                        "borderWidth": 1,
                        "height": 34,
                        "width": 64,
                      },
                      Object {
                        "backgroundColor": "black",
                      },
                    ],
                  ]
                }
                testID={undefined}
                tvParallaxProperties={undefined}
              >
                <View>
                  <View
                    style={
                      Array [
                        Object {
                          "flexDirection": "row",
                          "justifyContent": "space-between",
                          "marginLeft": 8,
                          "marginRight": 8,
                          "marginTop": 9,
                        },
                        undefined,
                      ]
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      disabled={false}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "white",
                            "fontFamily": "AvantGardeGothicITC",
                            "fontSize": 11,
                            "letterSpacing": 0.75,
                            "textAlign": "center",
                            "width": 24,
                          },
                          Object {
                            "color": "white",
                          },
                        ]
                      }
                    >
                      
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      disabled={false}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "white",
                            "fontFamily": "AvantGardeGothicITC",
                            "fontSize": 11,
                            "letterSpacing": 0.75,
                            "textAlign": "center",
                            "width": 24,
                          },
                          Object {
                            "color": "white",
                          },
                        ]
                      }
                    >
                      NO
                    </Text>
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "left": 6,
                          "position": "absolute",
                          "right": 6,
                          "top": 4,
                        },
                        Object {
                          "flexDirection": "row",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "backgroundColor": "black",
                            "borderColor": "white",
                            "borderRadius": 12,
                            "borderWidth": 1,
                            "height": 24,
                            "width": 24,
                          },
                          Object {
                            "borderColor": "white",
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                  },
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "paddingVertical": 6,
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "height": 43,
                    "marginTop": 20,
                    "width": 320,
                  }
                }
              >
                <View
                  accessibilityComponentType={undefined}
                  accessibilityLabel={undefined}
                  accessibilityTraits={undefined}
                  accessible={true}
                  collapsable={undefined}
                  hitSlop={undefined}
                  nativeID={undefined}
                  onLayout={undefined}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "rgba(255, 255, 255, 1)",
                      "borderColor": "rgba(255, 255, 255, 1)",
                      "borderWidth": 1,
                      "flex": 1,
                      "height": 36,
                      "justifyContent": "center",
                    }
                  }
                  testID={undefined}
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontSize": 12,
                        },
                        Object {
                          "color": "rgba(0, 0, 0, 1)",
                          "fontFamily": "AGaramondPro-Regular",
                          "opacity": 1,
                        },
                        Object {
                          "fontFamily": "AvantGardeGothicITC",
                        },
                      ]
                    }
                  >
                    SUBMIT TO ARTSY
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
